# LDIP

./: .gitignore  LDIP_Capstone_Blog_Post.md  LDIP_Capstone_Blog_Post_Public.md  LDIP_Medium_Blog_Post.md  LDIP_PROJECT_ANALYSIS.md  README.md  analysis.md  api-endpoints-frontend.md  epic-1-errors.md  epic-10a-errors.md  epic-2a-errors.md  epic-2b-errors.md  epic-2c-errors.md  epic-3-errors.md  epic-4-errors.md  epic-5-errors.md  epic-6-errors.md  epic-7-errors.md  epic-8-errors.md  epic-9-errors.md  google document vs docling.md  pyproject.toml  rag.md
backend/: .env.example  .gitignore  Dockerfile  README.md  check_celery.py  check_chunks.py  check_jobs.py  check_status.py  check_stuck.py  cleanup_orphaned_data.py  clear_all_data.py  clear_chunks.py  consolidate_act_resolutions.py  diagnose_jobs.py  fix_stuck_chunking_jobs.py  monitor_pipeline.py  monitor_processing.py  pyproject.toml  railway.toml  railway.worker.toml  reset_stuck_jobs.py  retry_stuck_job.py  revalidate_acts.py  run_api_tests.py  test_api_keys.py  test_contradiction_routing.py  trigger_task.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  bbox_filter.py  bbox_search.py  cache_control.py  circuit_breaker.py  config.py  correlation.py  cost_tracking.py  data_loader.py  data_quality.py  exceptions.py  fuzzy_match.py  llm_rate_limiter.py  logging.py  ocr_cleaner.py  page_detection.py  prompt_boundaries.py  rate_limit.py  reliability_logging.py  security.py
backend/app/data/: garbage_patterns.json  known_acts.json  validation_rules.json
backend/app/engines/: __init__.py  base.py
backend/app/models/: __init__.py  activity.py  anomaly.py  auth.py  chat.py  chunk.py  citation.py  consistency_issue.py  contradiction.py  contradiction_list.py  cost.py  cross_engine.py  document.py  entity.py  evaluation.py  export.py  global_search.py  inspector.py  job.py  library.py  matter.py  memory.py  notification.py  ocr.py  ocr_chunk.py  ocr_confidence.py  ocr_validation.py  orchestrator.py  queue_status.py  quota.py  reasoning_trace.py  rerank.py  safety.py  search.py  summary.py  tab_stats.py  table.py  timeline.py  verification.py
backend/app/services/: __init__.py  act_cache_service.py  activity_service.py  anomaly_service.py  audit_service.py  bounding_box_service.py  chunk_bbox_linker.py  chunk_cleanup_service.py  chunk_recovery_service.py  chunk_service.py  citation_service.py  consistency_service.py  contradiction_list_service.py  cross_engine_service.py  dashboard_stats_service.py  distributed_lock.py  document_service.py  email_service.py  eta_calculator.py  exceptions.py  global_search_service.py  job_recovery.py  library_service.py  llm_error_handler.py  matter_cost_service.py  matter_service.py  merge_trigger_service.py  notification_service.py  ocr_chunk_service.py  ocr_result_merger.py  pdf_chunker.py  pdf_router.py  pubsub_service.py  queue_metrics_service.py  reasoning_archive_service.py  reasoning_trace_service.py  section_index_service.py  storage_service.py  summary_edit_service.py  summary_service.py  (+4 more)
backend/app/workers/: celery.py
backend/docs/: TESTING.md  admin-operations.md  data-quality-source-page-lessons.md
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: admin_cli.py  backfill_chunk_bboxes.py  backfill_chunk_pages.py  backfill_citation_pages.py  backfill_citation_source_bboxes.py  backfill_entity_mention_bboxes.py  backfill_event_entities.py  backfill_timeline_data.py  cleanup_test_data.py  diagnose_citation_pages.py  reextract_timeline_events.py  setup_ocr_chunks_bucket.py  setup_storage_bucket.py  start_worker.py  test_citation_page_detection.py
backend/scripts/monitoring/: source_page_quality.sql
backend/tests/: __init__.py  conftest.py  test_exports.py
backend/tests/api/: test_auth_integration.py  test_chat.py  test_citations_split_view.py  test_documents.py  test_global_search.py  test_health.py  test_matters.py  test_notifications.py  test_tab_stats.py  test_users.py
backend/tests/benchmarks/: test_bbox_linking_performance.py  test_chunking_performance.py
backend/tests/core/: test_circuit_breaker.py  test_logging.py  test_prompt_boundaries.py  test_rate_limit.py  test_reliability_logging.py  test_security.py
backend/tests/integration/: test_all_endpoints_real_auth.py  test_anomaly_detection_pipeline.py  test_chunking_integration.py  test_citation_extraction.py  test_classification_pipeline.py  test_global_search_large_documents.py  test_job_tracking_integration.py  test_large_pdf_chunking.py  test_mig_integration.py  test_ocr_integration.py  test_ocr_validation_integration.py  test_rag_large_documents.py  test_search_integration.py  test_timeline_pipeline_with_anomalies.py  test_verification_integration.py  test_worker_chaos.py
backend/tests/migrations/: test_document_ocr_chunks.py
backend/tests/models/: test_memory_models.py
backend/tests/security/: test_4_layer_isolation.py  test_contradiction_isolation.py  test_cross_matter_penetration.py  test_matter_isolation.py  test_search_isolation.py
backend/tests/services/: test_activity_service.py  test_anomaly_service.py  test_bounding_box_service.py  test_chunk_bbox_linker.py  test_chunk_cleanup_service.py  test_chunk_service.py  test_chunking_logging.py  test_citation_service.py  test_consistency_service.py  test_contradiction_list_service.py  test_document_service.py  test_email_service.py  test_eta_calculator.py  test_global_search_service.py  test_llm_error_handler.py  test_matter_cost_service.py  test_matter_service.py  test_ocr_chunk_service.py  test_ocr_result_merger.py  test_page_offset_properties.py  test_pdf_chunker.py  test_pdf_router.py  test_queue_metrics_service.py  test_storage_service.py  test_summary_edit_service.py  test_summary_service.py  test_summary_verification_service.py  test_timeline_cache.py  test_timeline_service.py
backend/tests/workers/: test_chunked_document_tasks.py  test_document_tasks.py  test_email_tasks.py  test_engine_tasks_anomaly_trigger.py  (+1 more)
(+1198 files in other folders)
