[project]
name = "ldip-backend"
version = "0.1.0"
description = "Legal Document Intelligence Platform - FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "celery>=5.6.1",
    "cohere>=5.20.1",
    "fastapi>=0.128.0",
    "slowapi>=0.1.9",
    "google-cloud-documentai>=3.7.0",
    "google-generativeai>=0.8.6",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "structlog>=25.5.0",
    "supabase>=2.27.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.21",
    "sse-starlette>=2.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function calls in default arguments (required for FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["I001"]  # Ignore import sorting in alembic migrations

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true
